--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_marginTop="48dp"
         android:layout_marginLeft="44dp"
@@ -48,21 +49,135 @@
         android:background="@color/colorAccent"
         android:layout_height="302dp">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <TableRow>
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Mon"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Tue"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Wed"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Thu"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Fri"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Sat"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Sun"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+        </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <TableRow>
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Mon"
+                android:textStyle="bold"
+                android:background="@color/cardview_light_background"
+                android:gravity="center"
+                android:layout_marginHorizontal="1dp"
+                android:layout_marginRight="1dp"
+                android:layout_marginBottom="1dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Tue"
+                android:textStyle="bold"
+                android:background="@color/cardview_light_background"
+                android:gravity="center"
+                android:layout_marginHorizontal="1dp"
+                android:layout_marginRight="1dp"
+                android:layout_marginBottom="1dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Wed"
+                android:textStyle="bold"
+                android:background="@color/cardview_light_background"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Thu"
+                android:textStyle="bold"
+                android:layout_marginHorizontal="1dp"
+                android:layout_marginRight="1dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/cardview_light_background"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Fri"
+                android:textStyle="bold"
+                android:layout_marginHorizontal="1dp"
+                android:layout_marginRight="1dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/cardview_light_background"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Sat"
+                android:textStyle="bold"
+                android:layout_marginHorizontal="1dp"
+                android:layout_marginRight="1dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/cardview_light_background"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Sun"
+                android:textStyle="bold"
+                android:layout_marginHorizontal="1dp"
+                android:layout_marginRight="1dp"
+                android:layout_marginBottom="1dp"
+                android:background="@color/cardview_light_background"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_height="match_parent" />
+        </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
     </TableLayout>
 
 </LinearLayout>
